# Learned-Kernel

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
ci/: ci.yml.txt
notebooks/: ch01_geometry_hidden.ipynb  ch01_geometry_hidden.py  ch02_normal_form.ipynb  ch02_normal_form.py  ch03_chosen_to_learned.ipynb  ch03_chosen_to_learned.py  ch04_trees_are_kernels.ipynb  ch04_trees_are_kernels.py  ch05_gaussian_processes.ipynb  ch05_gaussian_processes.py  ch06_similarity_smoothing.ipynb  ch06_similarity_smoothing.py  ch07_what_makes_learnable.ipynb  ch07_what_makes_learnable.py  ch08_spectral_bochner.ipynb  ch08_spectral_bochner.py  ch09_spectral_vs_trees.ipynb  ch09_spectral_vs_trees.py  ch10_fusing_geometries.ipynb  ch10_fusing_geometries.py  ch11_symmetry_suffices.ipynb  ch11_symmetry_suffices.py  ch12_meta_learning_prior.ipynb  ch12_meta_learning_prior.py  ch13_invariant_encoders.ipynb  ch13_invariant_encoders.py  ch14_zeroshot_foundation_models.ipynb  ch14_zeroshot_foundation_models.py  ch15_scaling_wall.ipynb  ch15_scaling_wall.py  ch16_matrix_free_krylov.ipynb  ch16_matrix_free_krylov.py  ch17_nystrom_landmarks.ipynb  ch17_nystrom_landmarks.py
src/lkbook/: __init__.py  data.py  plotting.py
src/lkbook/_data/: taiwan_credit.npz
src/lkbook/chapters/: __init__.py  ch01.py  ch02.py  ch03.py  ch04.py  (+14 more)
tests/: test_ch01.py  test_ch02.py  test_ch03.py  test_ch04.py  test_ch05.py  test_ch06.py  test_ch07.py  test_ch08.py  test_ch09.py  test_ch10.py  test_ch11.py  test_ch12.py  test_ch13.py  test_ch14.py  test_ch15.py  test_ch16.py  test_ch17.py
